# Dework-rust

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  Rocket.toml  create_db.sh  designdb.mdj  docker-compose.yml
containers/: docker-compose.yml
db/: schema.sql
db/migrations/: 20220124224255_create_users.sql  20220124224303_create_companies.sql  20220124224314_create_contributions.sql  20220124224323_create_user_contributions.sql  20220124224330_create_user_companies.sql  20220124224345_create_stories.sql
migrations/2022-01-26-181433_create_users/: up.sql
migrations/2022-01-26-181439_create_companies/: down.sql  up.sql
migrations/2022-01-26-181446_create_contributions/: down.sql  up.sql
migrations/2022-01-26-181453_create_user_contributions/: down.sql  up.sql
migrations/2022-01-26-181459_create_user_companies/: down.sql  up.sql
migrations/2022-01-26-181504_create_stories/: down.sql  up.sql
src/: lib.rs  main.rs
src/api/: user_controller.rs
src/controllers/: user_controller.rs
src/db/: connection.rs  schema.rs
src/models/: company.rs  contribution.rs  models.rs  story.rs  user_company.rs  user_contribution.rs
