[package]
name = "dework"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0-rc.1"
diesel = { version = "1.4.8", features = ["postgres"] }
dotenv = "0.15.0"
serde = { version = "1.0.136", features = ["derive"]}
chrono = "0.4.19"

[dependencies.rocket_contrib]
version = "0.4.10"
default-features = false
features = ["json", "diesel_postgres_pool"]
